# rust-flagstat

./: Cargo.toml  README.md
src/: main.rs
