[package]
name = "rust-flagstat"
version = "0.1.0"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.7.1"
exitcode = "1.1.2"
log = "0.4.8"
rust-htslib = "0.36.0"
